src/epub/css/local.css
@charset "utf-8";
@namespace epub "http://www.idpf.org/2007/ops";

[epub|type~="z3998:poem"] p{
	text-align: initial;
	text-indent: 0;
}

[epub|type~="z3998:poem"] p > span{
	display: block;
	padding-left: 1em;
	text-indent: -1em;
}

[epub|type~="z3998:poem"] p > span + br{
	display: none;
}

[epub|type~="z3998:song"] p{
	text-align: initial;
	text-indent: 0;
}

[epub|type~="z3998:poem"] p + p{
	margin-top: 1em;
}

[epub|type~="z3998:song"] p > span{
	display: block;
	padding-left: 1em;
	text-indent: -1em;
}

[epub|type~="z3998:song"] p > span + br{
	display: none;
}

p span.i1{
	padding-left: 2em;
	text-indent: -1em;
}

p span.i2{
	padding-left: 3em;
	text-indent: -1em;
}

footer{
	margin-top: 1em;
	text-align: right;
}

[epub|type~="z3998:signature"]{
	font-variant: small-caps;
}

